# twitch_dl_com

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  twitch_chat_downloader.py
.github/workflows/: claude.yml
config/: settings.template.json
import/: urls.txt
src/twitch_dl_com/: __main__.py  constants.py  exceptions.py  logger.py  tw_api.py  tw_auth.py
src/twitch_dl_com/database/: __init__.py  db_manager.py
src/twitch_dl_com/services/: __init__.py  comment_download_service.py  configuration_service.py
src/twitch_dl_com/ui/: base_user_panel.py  enhanced_user_panel.py  main_window.py  user_item_widget.py  user_list_widget.py  user_panel.py  user_register_dialog.py  video_list_dialog.py
src/twitch_dl_com/utils/: __init__.py  image_loader.py  time_formatter.py
